Task#287_Refactor User/Rating/Report Controller
