# src/main/java/elektroGo/back/controller/ReportController.java
@@ -55,14 +55,40 @@ public class ReportController {
         }
     }
 
-    @DeleteMapping("")
-    public void unreportUser(@RequestParam String userWhoReports, @RequestParam String reportedUser) throws SQLException {
-        logger.log("\nStarting unreportUser method with userWhoReports: '" + userWhoReports + "' and reportedUser: '" + reportedUser + "'", logType.TRACE);
+    @GetMapping("/from/{username}")
+    public List<GatewayReport> getReportsMadeUser(@PathVariable String username) throws SQLException {
+        logger.log("\nStarting getReportsMadeUser method with username : '" + username + "'", logType.TRACE);
         FinderReport fR = FinderReport.getInstance();
-        GatewayReport gR = fR.findByPrimaryKey(userWhoReports, reportedUser);
-        if (gR == null) throw new ReportNotFound(userWhoReports, reportedUser);
+        FinderUser fU = FinderUser.getInstance();
+        if ( fU.findByUsername(username) == null) throw new UserNotFound(username);
+        List<GatewayReport> l = fR.findByUserWhoReports(username);
+        String log = "Returning reports made by user with username: '" + username + "' that are:" ;
+        for (GatewayReport g : l) log += g.json() + "\n";
+        logger.log(log + "End of method", logType.TRACE);
+        return l;
+    }
+
+    @GetMapping("/to/{username}")
+    public List<GatewayReport> getReportsReceivedUser(@PathVariable String username) throws SQLException {
+        logger.log("\nStarting reportsReceivedUser method with username : '" + username + "'", logType.TRACE);
+        FinderReport fR = FinderReport.getInstance();
+        FinderUser fU = FinderUser.getInstance();
+        if ( fU.findByUsername(username) == null) throw new UserNotFound(username);
+        List<GatewayReport> l = fR.findByReportedUser(username);
+        String log = "Returning reports received by user with username: '" + username + "' that are:" ;
+        for (GatewayReport g : l) log += g.json() + "\n";
+        logger.log(log + "End of method", logType.TRACE);
+        return l;
+    }
+
+    @DeleteMapping("/from/{userFrom}/to/{userTo}")
+    public void unreportUser(@PathVariable String userFrom, @PathVariable String userTo) throws SQLException {
+        logger.log("\nStarting unreportUser method with userFrom: '" + userFrom + "' and userTo: '" + userTo + "'", logType.TRACE);
+        FinderReport fR = FinderReport.getInstance();
+        GatewayReport gR = fR.findByPrimaryKey(userFrom, userTo);
+        if (gR == null) throw new ReportNotFound(userFrom, userTo);
         gR.remove();
-        if (fR.findByPrimaryKey(userWhoReports, reportedUser) == null) logger.log("Report removed successfully, end of method", logType.TRACE);
+        if (fR.findByPrimaryKey(userFrom, userTo) == null) logger.log("Report removed successfully, end of method", logType.TRACE);
         else logger.log("ERROR, couldn't delete the report", logType.ERROR);
     }
 }
