# src/main/java/elektroGo/back/controller/UserController.java
@@ -126,87 +126,4 @@ public class UserController {
         logger.log("Returning this user: " + gU.json(), logType.TRACE);
         return gU.json();
     }
-
-    /**
-     * @brief Metode per llegir els ratings que ha fet un usuari
-     * @param username Usuari que ha fet els ratings
-     * @return Llistat de ratings que ha fet l'usuari
-     */
-    @GetMapping("/{username}/ratings/made")
-    public List<GatewayRating> getRatingsMadeUser(@PathVariable String username) throws SQLException {
-        logger.log("\nStarting getRatingsMadeUser method with userName '" + username + "'...", logType.TRACE);
-        FinderUser fU = FinderUser.getInstance();
-        if (fU.findByUsername(username) == null) throw new UserNotFound(username);
-        FinderRating fR = FinderRating.getInstance();
-        List<GatewayRating> l = fR.findByUserWhoRates(username);
-        String log = "Returning this ratings:";
-        for (GatewayRating g : l) log += g.json() + "\n";
-        logger.log(log, logType.TRACE);
-        return l;
-    }
-
-    /**
-     * @brief Metode que retorna els ratings que se li han fet a un usuari
-     * @param username Usuari al qual se li han fet els ratings
-     * @return Llistat de ratings que s'han fet a l'usuari "username"
-     */
-    @GetMapping("/{username}/ratings/received")
-    public List<GatewayRating> getRatingsReceivedUser(@PathVariable String username) throws SQLException {
-        logger.log("\nStarting getRatingsReceivedUser method with username '" + username + "'...", logType.TRACE);
-        FinderUser fU = FinderUser.getInstance();
-        if (fU.findByUsername(username) == null) throw new UserNotFound(username);
-        FinderRating fR = FinderRating.getInstance();
-        List<GatewayRating> l = fR.findByRatedUser(username);
-        String log = "Returning this ratings:";
-        for (GatewayRating g : l) log += g.json() + "\n";
-        logger.log(log, logType.TRACE);
-        return l;
-    }
-
-    @GetMapping("/ratings/from/{userFrom}/to/{userTo}")
-    public GatewayRating getSingleRating(@PathVariable String userFrom, @PathVariable String userTo) throws SQLException {
-        logger.log("\nStarting getSingleRating from ' " + userFrom + "' to '" + userTo, logType.TRACE);
-        FinderRating fR = FinderRating.getInstance();
-        GatewayRating gR = fR.findByPrimaryKey(userFrom, userTo);
-        if (gR == null) throw new RatingNotFound(userFrom, userTo);
-        logger.log("Returning this rating:\n" + gR.json() + "\nEnd of method", logType.TRACE);
-        return gR;
-    }
-
-    @GetMapping("/{username}/ratings/avg")
-    public avgRate avgRate(@PathVariable String username) throws SQLException {
-        logger.log("\nStarting avgRate method with username : '" + username +"'...", logType.TRACE);
-        FinderUser fU = FinderUser.getInstance();
-        if (fU.findByUsername(username) == null) throw new UserNotFound(username);
-        FinderRating fR = FinderRating.getInstance();
-        avgRate ret = fR.findUserRateAvg(username);
-        logger.log("Returning this avgRate: ratingValue = " + ret.getRatingValue() + " and numberOfRatings = " + ret.getNumberOfRatings() + " end of method", logType.TRACE);
-        return ret;
-    }
-
-    @GetMapping("/{username}/reports/made")
-    public List<GatewayReport> getReportsMadeUser(@PathVariable String username) throws SQLException {
-        logger.log("\nStarting getReportsMadeUser method with username : '" + username + "'", logType.TRACE);
-        FinderReport fR = FinderReport.getInstance();
-        FinderUser fU = FinderUser.getInstance();
-        if ( fU.findByUsername(username) == null) throw new UserNotFound(username);
-        List<GatewayReport> l = fR.findByUserWhoReports(username);
-        String log = "Returning reports made by user with username: '" + username + "' that are:" ;
-        for (GatewayReport g : l) log += g.json() + "\n";
-        logger.log(log + "End of method", logType.TRACE);
-        return l;
-    }
-
-    @GetMapping("/{username}/reports/received")
-    public List<GatewayReport> getReportsReceivedUser(@PathVariable String username) throws SQLException {
-        logger.log("\nStarting reportsReceivedUser method with username : '" + username + "'", logType.TRACE);
-        FinderReport fR = FinderReport.getInstance();
-        FinderUser fU = FinderUser.getInstance();
-        if ( fU.findByUsername(username) == null) throw new UserNotFound(username);
-        List<GatewayReport> l = fR.findByReportedUser(username);
-        String log = "Returning reports received by user with username: '" + username + "' that are:" ;
-        for (GatewayReport g : l) log += g.json() + "\n";
-        logger.log(log + "End of method", logType.TRACE);
-        return l;
-    }
 }
